# -*- coding: utf-8 -*-
[metadata]
name = fuzzing-tc
author = Mozilla Security
author_email = fuzzing+taskcluster@mozilla.com
description = Triggers a decision task for Mozilla Firefox build fuzzing
license = MPL 2.0
url = https://github.com/MozillaSecurity/fuzzing-tc
platforms = any

[options]
install_requires =
    taskcluster~=24.3.0
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.5

[options.extras_require]
decision =
    tc-admin==2.3.0
dev =
    pre-commit
    tox

[options.entry_points]
console_scripts =
    fuzzing-decision = decision.cli:main

[tool:pytest]
filterwarnings =
    ignore:The 'warn' method is deprecated:DeprecationWarning:taskcluster
    ignore:Using or importing the ABCs:DeprecationWarning:yaml

[tox:tox]
envlist = py3,lint
tox_pip_extensions_ext_venv_update = true
skip_missing_interpreters = true

[testenv]
extras = decision
deps =
    pytest==5.3.5
    pytest-responses==0.4.0
    responses==0.10.9
usedevelop = true
commands = pytest -v --cache-clear --basetemp="{envtmpdir}" {posargs}

[testenv:lint]
deps =
    pre-commit==2.0.1
skip_install = true
commands = pre-commit run -a
