# -*- coding: utf-8 -*-
[metadata]
name = fuzzing-tc
author = Mozilla Security
author_email = fuzzing+taskcluster@mozilla.com
description = Triggers a decision task for Mozilla Firefox build fuzzing
license = MPL 2.0
url = https://github.com/MozillaSecurity/fuzzing-tc
platforms = any

[options]
install_requires =
    taskcluster~=30.0.0
    pyyaml
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7,<3.9

[options.extras_require]
decision =
    tc-admin~=2.5.1
dev =
    pre-commit
    tox

[options.entry_points]
console_scripts =
    fuzzing-decision = fuzzing_tc.decision.cli:main
    fuzzing-pool-launch = fuzzing_tc.pool_launch.cli:main

[tool:pytest]
filterwarnings =
    ignore:The 'warn' method is deprecated:DeprecationWarning:taskcluster
    ignore:Using or importing the ABCs:DeprecationWarning:yaml

[tox:tox]
envlist = py37,py38,lint
tox_pip_extensions_ext_venv_update = true
skip_missing_interpreters = true

[testenv]
extras = decision
deps =
    pytest~=5.2
    pytest-cov
    pytest-responses
usedevelop = true
commands = pytest -v --log-level=DEBUG --cache-clear --cov="{toxinidir}" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}

[testenv:lint]
deps =
    pre-commit
skip_install = true
commands = pre-commit run -a

[coverage:run]
omit =
    setup.py
    tests/*
    dist/*
    .tox/*
    .egg/*
